--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_local_notifications: ^9.1.5
   lottie: ^1.2.0
   flutter_easyloading: ^3.0.3
+  rflutter_alert: ^2.0.4
+
   
 
 
