--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,7 @@ android {
    }
    buildTypes {
        release {
+           shrinkResources true
            signingConfig signingConfigs.release
        }
    }
