--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   android_intent_plus: ^3.1.0
   double_back_to_close_app: ^2.1.0
   internet_connection_checker: ^0.0.1+3
+  cached_network_image: ^3.2.0
+
 
   
 
