--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.foodorder_userapp"
+        applicationId "com.foodorder_userapp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
@@ -62,12 +62,7 @@ android {
    }
    buildTypes {
        release {
-           shrinkResources true
            signingConfig signingConfigs.release
-           minifyEnabled true
-           useProguard true
-           proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' 
-
        }
    }
 
