--- a/key.properties
+++ b/key.properties
@@ -1,4 +1,4 @@
 storePassword=Sanjib@292
 keyPassword=Sanjib@292
 keyAlias=upload
-storeFile=../app/upload-keystore.jks
+storeFile=/Users/sanjib292/consumerApp/android/app/chefooKey.jks
